2010-07-14  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Components/SearchEntry.cs: Fixed potential issue
	  in search entry when reparenting.

2010-07-13  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Ide.Gui/DefaultWorkbench.cs: Better comments
	  about OS X hacks.

2010-07-13  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am:
	* MonoDevelop.Ide.csproj:
	* MonoDevelop.Components/DropDownBox.cs:
	* MonoDevelop.Components/DropDownBoxListWindow.cs: Moved
	  dropdown box to components.

2010-07-13  Levi Bard  <levi@unity3d.com>

	* MonoDevelop.Ide.Gui/DefaultWorkbench.cs:
	  Restore previous window state at launch on OSX.

2010-07-12  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Ide.Extensions/TextEditorExtensionNode.cs:
	  Case-insensitive file extension comparison.

2010-07-12  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Ide.Gui/Document.cs: Track
	  ProjectDomService/Parser API.

2010-07-12  Levi Bard  <levi@unity3d.com>

	* MonoDevelop.Ide.ProgressMonitoring/BaseProgressMonitor.cs:
	  Fix #617276: MD crashes when clicking a script error in Unity3d.

2010-07-12  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.NavigateToDialog/NavigateToDialog.cs: ':'
	  now automatically only filters files.

2010-07-11  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Ide.addin.xml:
	* MonoDevelop.Ide.Projects.OptionPanels/NamespaceSynchronisationPanel.cs:
	  Naming policies panel should be shown for all items that
	  contain DotNetProject, not just DotNetProject. 

2010-07-11  Michael Hutchinson  <mhutchinson@novell.com>

	* gtk-gui/gui.stetic: Flsuh.

	* Makefile.am:
	* gtk-gui/objects.xml: Removed objects.xml from the
	  Makefile.am since it's not in the project file and was
	  breaking the build when MD added a resource ID to the
	  makefile.

2010-07-11  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Ide.addin.xml: The "navigate forward/back"