@@ -1,3 +1,9 @@
+2010-07-14  Levi Bard  <levi@unity3d.com>
+
+	* MonoDevelop.Ide/Ide.cs:
+	* MonoDevelop.Ide/IdeStartup.cs:
+	  Don't open projects as source files.
+
 2010-07-14  Mike Krüger  <mkrueger@novell.com>
 
 	* MonoDevelop.Components/SearchEntry.cs: Fixed potential issue
